--- a/deployment-service.yml
+++ b/deployment-service.yml
@@ -4,7 +4,7 @@ kind: Deployment
 metadata:
   name: tetris
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
       app: tetris
@@ -31,4 +31,4 @@ spec:
   - protocol: TCP
     port: 80                 # Expose port 80
     targetPort: 3000
-  type: LoadBalancer
+  type: Load33Balancer
