--- a/deployment-service.yml
+++ b/deployment-service.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: tetris
-        image: shaikmustafa/anath:v1
+        image: sumant51/loki:mydockerimage
         ports:
         - containerPort: 3000   # Use port 3000
 
